[package]
name = "packedsfen"
version = "0.3.0"
authors = ["jinpu <nanasi18@gmail.com>"]
edition = "2018"

description = "packedsfen is a library for processing Huffman-encoded supervised phases for Shogi AI."
documentation = "https://docs.rs/packedsfen"
homepage = "https://crates.io/crates/packedsfen"
repository = "https://github.com/j6k1/packedsfen"

readme = "README.md"

keywords = ["shogi","shogiai","usi-protocol","sfen","hcpe"]
categories = []
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usiagent = "0.6.1"
